--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true">
-        <!--android:theme="@style/AppTheme">-->
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme">
@@ -18,14 +18,9 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".RegistrationActivity"
-            android:theme="@style/MyTheme"></activity>
+        <activity android:name=".RegistrationActivity"></activity>
 
-        <activity
-            android:name=".TrackerActivity"
-            android:theme="@style/MyTheme">
-        </activity>
+        <activity android:name=".TrackerActivity"></activity>
 
     </application>
 
