--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,9 @@ dependencies {
     compile 'com.android.support:design:22.2.+'
     compile 'com.google.android.gms:play-services:7.+'
     testCompile 'junit:junit:4.12'
+
+    //Rx
+    //compile 'io.reactivex:rxjava:1.2.5'
+    //compile 'io.reactivex:rxandroid:1.2.1'
 }
 
